Fix presence of horizontal scroll on Profile page on phones

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1165,6 +1165,11 @@ h3 {
   border-radius: 0.8rem;
   transform: scale(1.5);
 }
+@media (max-width: 849px) {
+  .profile__checkbox-wrapper {
+    transform: scale(1.25);
+  }
+}
 
 .tooltip-anchor {
   position: relative;
